[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

thiserror = "1.0"
serde = "^1.0"
serde_json = "1.0.85"
serde_derive = "1.0.144"

futures = "0.3.24"
tokio = { version = "1.21.1", features = ["full"] }
async-trait = "0.1.57"
tokio-stream = "0.1.9"
warp = "0.3.2"

futures-util = "0.3.24"

isocountry = "0.3.2"