[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
futures-util = "0.3.24"
async-trait = "0.1.57"
thiserror = "1.0.37"
gloo-net = "0.2.4"
yew = "^0.19"
isocountry = "0.3.2"
warp = "0.3.3"