[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.24"
web-sys = "0.3.60"
js-sys = "0.3.60"

wasm-logger = "0.2.0"
log = "0.4.17"

yew = "^0.19"
gloo-net = "0.2.4"
gloo = "0.8.0"	

serde = { version = "1.0.144", features = ["derive"] }

thiserror = "1.0.35"

clone_all = "0.1.1"

reqwasm = "0.5.0"

futures = "0.3.24"